[tool.poetry]
name = "artifica"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
wagtail = "^4.0.4"
pre-commit = "^2.20.0"


[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.6.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
